crates/plotnik-tests/tests/03-analyze/predicates/string_escape_unknown.txt
Q = (identifier == "a\qb")
------------------ DIAGNOSTICS -------------------
error: unknown escape sequence in string
 --> query.ptk:1:22
  |
1 | Q = (identifier == "a\qb")
  |                      ^^
  |
help: supported escapes are `\n`, `\r`, `\t`, `\\`, `\"`, `\'`, and `\u{…}`. Write `\\` to match a literal backslash
-------------------- SYMBOLS ---------------------
